[package]
name = "nlock_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdk = { version = "0.16.0", default-feature = false, features = ["compiler", "all-keys", "key-value-db", "rpc", "compact_filters"] }
dirs-next = "2.0"